terraform/04-network/igw.tf
# =============================================================================
# インターネットゲートウェイ
# =============================================================================
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${local.name_prefix}-igw"
  }
}
